--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,10 @@ body {
 }
 
 .blur {
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
+    filter: blur(3px);
+    -webkit-filter: blur(3px);
     height: 100%;
-    background-image: url(../img/red-blue.jpg);
+    background-image: url(../img/vitruvianbg.png);
     background-size: cover;
     position: absolute;
     top: 0;
@@ -24,7 +24,7 @@ body {
     left: 0;
     right: 0;
     overflow: hidden;
-    z-index: -1;
+    z-index: -2;
 }
 
 .data {
@@ -99,6 +99,7 @@ a {
     justify-self: center;
     position: fixed;
     bottom: 1px;
+    color: #BEA966;
 }
 
 .bottom {
